Fix overlapping text when zooming

--- a/app/component/itinerary/itinerary.scss
+++ b/app/component/itinerary/itinerary.scss
@@ -2113,7 +2113,8 @@ $itinerary-tab-switch-height: 48px;
       border-top: 1px solid #ddd;
       padding: 1.2em 0;
       margin-bottom: 1em;
-      height: 60px;
+      min-height: 60px;
+      height: auto;
       font-size: 0.9375rem;
 
       @extend .itinerary-leg-text-gray;
